Add YouTube video to Arctic Blast review

--- a/content/reviews/arctic-blast-review.mdx
+++ b/content/reviews/arctic-blast-review.mdx
@@ -4,7 +4,7 @@ slug: arctic-blast-review
 excerpt: "We investigate the 'Cooling Pain-Relief' breakthrough. Can a few drops really turn off chronic pain signals? Read our in-depth analysis."
 thumbnail: "https://images.unsplash.com/photo-1544367567-0f2fcb009e0b?w=800&q=80"
 rating: 4.7
-videoId: ""
+videoId: "zTQe_SO-pGY"
 verdict: "recommended"
 pros:
   - "365-Day Money-Back Guarantee: Return empty bottles up to a year later"
